--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
+    "d3-geo-projection": "^4.0.0",
     "datamaps": "^0.5.9",
     "react": "^18.2.0",
+    "react-canada-map": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
@@ -44,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3-geo": "^3.0.2",
+    "@types/react-simple-maps": "^3.0.0"
   }
 }
