--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,12 @@
     "react": "^18.2.0",
     "react-canada-map": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
@@ -50,6 +53,9 @@
   },
   "devDependencies": {
     "@types/d3-geo": "^3.0.2",
-    "@types/react-simple-maps": "^3.0.0"
+    "@types/react-redux": "^7.1.24",
+    "@types/react-simple-maps": "^3.0.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
