--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "d3-geo-projection": "^4.0.0",
     "datamaps": "^0.5.9",
     "react": "^18.2.0",
     "react-canada-map": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
