--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@types/styled-components": "^5.1.26",
     "d3-geo-projection": "^4.0.0",
     "datamaps": "^0.5.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-canada-map": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
