--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "recharts": "^2.2.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
@@ -56,9 +57,11 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/d3-geo": "^3.0.2",
     "@types/react-redux": "^7.1.24",
     "@types/react-simple-maps": "^3.0.0",
+    "@types/recharts": "^1.8.24",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0"
   }
