--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,6 +17,7 @@
     "@types/styled-components": "^5.1.26",
     "d3-geo-projection": "^4.0.0",
     "datamaps": "^0.5.9",
+    "framer-motion": "^6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-canada-map": "^1.0.2",
