--- a/client/package.json
+++ b/client/package.json
@@ -18,16 +18,19 @@
     "d3-geo-projection": "^4.0.0",
     "datamaps": "^0.5.9",
     "framer-motion": "^6",
+    "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-canada-map": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
+    "react-typescript-datamaps": "^1.0.3",
     "recharts": "^2.2.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/d3-geo": "^3.0.2",
+    "@types/leaflet": "^1.9.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-simple-maps": "^3.0.0",
     "@types/recharts": "^1.8.24",
