--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@chakra-ui/react": "^2.4.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/anonymous-pro": "^4.5.9",
+    "@fontsource/open-sans": "^4.5.13",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
