--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@emotion/styled": "^11",
     "@fontsource/anonymous-pro": "^4.5.9",
     "@fontsource/open-sans": "^4.5.13",
+    "@sentry/react": "^7.33.0",
+    "@sentry/tracing": "^7.33.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/node": "^18.11.15",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-modal": "^3.13.1",
