--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4
 beautifulsoup4==4.11.1
+blinker==1.5
 bs4==0.0.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
@@ -8,6 +9,7 @@ cssselect==1.2.0
 dnspython==2.2.1
 fake-useragent==1.1.1
 Flask==2.2.2
+Flask-Cors==3.0.10
 idna==3.4
 importlib-metadata==5.2.0
 itsdangerous==2.1.2
@@ -22,6 +24,8 @@ pyquery==1.4.3
 python-dotenv==0.21.0
 requests==2.28.1
 requests-html==0.10.0
+sentry-sdk==1.14.0
+six==1.16.0
 soupsieve==2.3.2.post1
 tqdm==4.64.1
 urllib3==1.26.13
