--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-modal": "^3.13.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "d3-geo-projection": "^4.0.0",
     "datamaps": "^0.5.9",
